--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
                             <img class="gizli" src="@item.PhotoURL.Replace("200", "400")" alt="" /></a>
                         </p>
                         <div class="metinkaydir" style="display:block; font-weight: 600;">@item.Name</div>
-                        <a href="https://twitter.com/@item.Username") >@item.Username</a>
+                        <a href="https://twitter.com/@item.Username" target="_blank"><i class="bi bi-link-45deg">@item.Username</i></a>
                     </td>
                     <td>@item.Cinsiyet</td>
                     <td>@item.Location</td>
