--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,15 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
+<div id="deger"></div>
 <div class="col-md-10">
+    <div id="row">
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" id="progress" style="width:50%">
+                40%
+            </div>
+        </div>
+    </div>
     <div class="table-wrapper">
         <table class="fl-table">
             <thead>
@@ -17,12 +24,12 @@
                     <th>Bio</th>
                     <th>Takipçi</th>
                     <th>Takip<br />Edilen</th>
-                    <th>Kayıt <br />Tarihi</th>
+                    <th>Kayıt<br />Tarihi</th>
                     <th>Tweet</th>
                     <th>Son<br />Tweet</th>
                     <th>Ortalama<br />Tweet</th>
                     <th>Beğeni</th>
-                    <th>Son <br />Beğeni</th>
+                    <th>Son<br />Beğeni</th>
                     <th>Ortalama<br />Beğeni</th>
                     <th>Takipçi<br />Durumu</th>
                     <th>Takip<br />Durumu</th>
@@ -31,40 +38,59 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                <tr>
+                    <tr>
 
-                    <td>@item.Count</td>
-                    <td>
-                        <p class="product">
-                            <a href="#">
-                            <img src="@item.PhotoURL" alt="" style="border-radius:50%; width:150px; height:150px;" />
-                            <img class="gizli" src="@item.PhotoURL.Replace("200", "400")" alt="" /></a>
-                        </p>
-                        <div class="metinkaydir" style="display:block; font-weight: 600;">@item.Name</div>
-                        <a href="https://twitter.com/@item.Username" target="_blank"><i class="bi bi-link-45deg">@item.Username</i></a>
-                    </td>
-                    <td>@item.Cinsiyet</td>
-                    <td>@item.Location</td>
-                    <td><div class="metinkaydir" style="width: 150px;">@item.Bio</div></td>
-                    <td>@item.Followers</td>
-                    <td>@item.Following</td>
-                    <td>@item.Date</td>
-                    <td>@item.TweetCount</td>
-                    <td>@item.LastTweetsDate</td>
-                    <td>@item.TweetSikligi</td>
-                    <td>@item.LikeCount</td>
-                    <td>@item.LastLikesDate</td>
-                    <td>@item.BegeniSikligi</td>
-                    <td><div class="metinkaydir" style="width:60px">@item.FollowersStatus</div></td>
-                    <td>
-                        <div class="metinkaydir" style="width: 92px"><button type="button" class="btn btn-primary">@item.FollowStatus</button></div>
-                        <button type="button" class="btn btn-danger" style="display: inline-block; width: 92px; margin-top: 10px; margin-bottom: 10px;">Engelle</button>
-                        <br />
-                        <button type="button" class="btn btn-warning" style="display: inline-block; width: 92px;">Sessize Al</button>
-                    </td>
-                </tr>
+                        <td>@item.Count</td>
+                        <td>
+                            <p class="product">
+                                <a href="#">
+                                    @if (item.isPrivate)
+                                    {<img style="position:absolute; left: -20px" src="https://cdn4.iconfinder.com/data/icons/materia-flat-security-vol-1/24/022_044_lock_padlock_password_secure_private_protection-32.png">}
+                                    <img src="@item.PhotoURL" alt="" style="border-radius:50%; width:150px; height:150px;" />
+                                    <img class="gizli" src="@item.PhotoURL.Replace("200", "400")" alt="" />
+                                </a>
+                            </p>
+                            <div class="metinkaydir" style="display:block; font-weight: 600;">@item.Name</div>
+                            <a href="https://twitter.com/@item.Username" target="_blank"><i class="bi bi-link-45deg">@item.Username</i></a>
+                        </td>
+                        <td>@item.Cinsiyet</td>
+                        <td>@item.Location</td>
+                        <td><div class="metinkaydir" style="width: 150px;">@item.Bio</div></td>
+                        <td>@item.Followers</td>
+                        <td>@item.Following</td>
+                        <td>@item.Date</td>
+                        <td>@item.TweetCount</td>
+                        <td>@item.LastTweetsDate</td>
+                        <td>@item.TweetSikligi</td>
+                        <td>@item.LikeCount</td>
+                        <td>@item.LastLikesDate</td>
+                        <td>@item.BegeniSikligi</td>
+                        <td><div class="metinkaydir" style="width:60px">@item.FollowersStatus</div></td>
+                        <td>
+                            <div class="metinkaydir" value="@item.Username" style="width: 92px"><button type="button" class="btn btn-primary">@item.FollowStatus</button></div>
+                            <button type="button" value="@item.Username" class="btn btn-danger" style="display: inline-block; width: 92px; margin-top: 10px; margin-bottom: 10px;">Engelle</button>
+                            <br />
+                            <button type="button" value="@item.Username" class="btn btn-warning" style="display: inline-block; width: 92px;">Sessize Al</button>
+                        </td>
+                    </tr>
                 }
-                </tbody>
+            </tbody>
         </table>
     </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        setInterval(() => {
+            $.ajax({
+                url: '/Home/GuncelleProgress/',
+                type: 'POST',
+                dataType: 'text',
+                success: function (data) {
+                    $("#progress").css("width", data + "%");
+                    $("#progress").text(data + "%");
+                }
+            });
+        }
+        , 5000);
+    });
+</script>
