--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,20 +1,24 @@
 ﻿@using Tweetly_MVC.Models;
 
 @model List<User>
+
 @{
+
     ViewData["Title"] = "Home Page";
 }
-<div id="deger"></div>
+
+
 <div class="col-md-10">
     <div id="row">
-        <div class="progress">
+        <label id="Progresstext"></label>
+        <div class="progress" style="display:none">
             <div class="progress-bar progress-bar-striped active" role="progressbar" id="progress" style="width:50%">
                 40%
             </div>
         </div>
     </div>
     <div class="table-wrapper">
-        <table class="fl-table">
+        <table class="fl-table" style="font-size:12px; font-weight:600;">
             <thead>
                 <tr>
                     <th>Count</th>
@@ -67,10 +71,9 @@
                         <td>@item.BegeniSikligi</td>
                         <td><div class="metinkaydir" style="width:60px">@item.FollowersStatus</div></td>
                         <td>
-                            <div class="metinkaydir" value="@item.Username" style="width: 92px"><button type="button" class="btn btn-primary">@item.FollowStatus</button></div>
-                            <button type="button" value="@item.Username" class="btn btn-danger" style="display: inline-block; width: 92px; margin-top: 10px; margin-bottom: 10px;">Engelle</button>
-                            <br />
-                            <button type="button" value="@item.Username" class="btn btn-warning" style="display: inline-block; width: 92px;">Sessize Al</button>
+                            <button value="@item.Username" style="width: 92px;display: block;" type="button" class="btn btn-primary metinkaydir">@item.FollowStatus</button>
+                            <button type="button" value="@item.Username" class="btn btn-danger" style="display: block; width: 92px; margin-top: 10px;">Engelle</button>
+                            <button type="button" value="@item.Username" class="btn btn-warning" style=" display: block; width: 92px; margin-top: 10px;">Sessize Al</button>
                         </td>
                     </tr>
                 }
@@ -79,18 +82,32 @@
     </div>
 </div>
 <script type="text/javascript">
+ 
     $(document).ready(function () {
-        setInterval(() => {
-            $.ajax({
-                url: '/Home/GuncelleProgress/',
-                type: 'POST',
-                dataType: 'text',
-                success: function (data) {
-                    $("#progress").css("width", data + "%");
-                    $("#progress").text(data + "%");
-                }
-            });
-        }
-        , 5000);
+        
+        $("#menu").on("click", function () {
+            $("#progress").css("display","block");
+            setInterval(() => {
+                $.ajax({
+                    url: '/Home/GuncelleProgress/',
+                    type: 'GET',
+                    dataType: 'text',
+                    success: function (data) {
+                        $("#progress").css("width", data + "%");
+                        $("#progress").text(data + "%");
+                    }
+                });
+                $.ajax({
+                    url: '/Home/LimitText/',
+                    type: 'GET',
+                    dataType: 'text',
+                    success: function (data) {
+                        $("#Progresstext").text(data + "%");
+                    }
+                });
+            }
+                , 5000);
+        });
+
     });
 </script>
