--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,19 +1,36 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    ViewData["Title"] = "Home Page";
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Tweetly_MVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bulma.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.datatables.net/fixedheader/3.1.9/js/dataTables.fixedHeader.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
+
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.1.9/css/fixedHeader.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <link rel="stylesheet" href="~/css/site.css" />
+
 </head>
 <body>
     <header>
@@ -27,7 +44,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Indexx">Home</a>
+                            <a id="menu" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Indexx">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -37,59 +54,58 @@
             </div>
         </nav>
     </header>
-    <div class="container" style="margin: 0px">
+    <div class="container-fluid" style="margin: 0px">
         <div class="row">
-
-        </div>
-        <div class="row">
-
             <div class="col-md-2">
                 <div class="row">
                     <div class="profile">
                         <div class="image">
                             <div class="circle-1"></div>
                             <div class="circle-2"></div>
-                            <img src="https://100dayscss.com/codepen/jessica-potter.jpg" width="70" height="70" alt="Jessica Potter">
+                            <img src="@Hesap.OturumBilgileri.PhotoURL" width="70" height="70" alt="@Hesap.OturumBilgileri.Username">
                         </div>
 
-                        <div class="name">Niyazi Keklik</div>
-                        <div class="job">alienationxs</div>
+                        <div class="name">@Hesap.OturumBilgileri.Name</div>
+                        <div class="job">@Hesap.OturumBilgileri.Username</div>
 
                         <div class="stats">
                             <div class="box">
-                                <span class="value">523</span>
-                                <span class="parameter">Takipçi <br> Sayısı</span>
+                                <span class="value">@Hesap.OturumBilgileri.Followers</span>
+                                <span class="parameter">Takipçi<br>Sayısı</span>
                             </div>
                             <div class="box">
-                                <span class="value">1387</span>
-                                <span class="parameter">Takip <br> Edilen</span>
+                                <span class="value">@Hesap.OturumBilgileri.BegeniSikligi</span>
+                                <span class="parameter">Beğeni<br>Sıklığı </span>
                             </div>
                             <div class="box">
-                                <span class="value">146</span>
-                                <span class="parameter">Tweet <br> Sayısı</span>
+                                <span class="value">@Hesap.OturumBilgileri.LastLikesDate</span>
+                                <span class="parameter">Son<br>Beğeni</span>
                             </div>
+                         
                             <div class="box">
-                                <span class="value">146</span>
-                                <span class="parameter">Beğeni <br> Sayısı</span>
+                                <span class="value">@Hesap.OturumBilgileri.TweetCount</span>
+                                <span class="parameter">Tweet<br>Sayısı</span>
                             </div>
 
                         </div>
                         <div class="stats">
+
                             <div class="box">
-                                <span class="value">523</span>
-                                <span class="parameter">Takipçi <br> Sayısı</span>
+                                <span class="value">@Hesap.OturumBilgileri.Following</span>
+                                <span class="parameter">Takip<br>Edilen</span>
                             </div>
                             <div class="box">
-                                <span class="value">1387</span>
-                                <span class="parameter">Takip <br> Edilen</span>
+                                <span class="value">@Hesap.OturumBilgileri.TweetSikligi</span>
+                                <span class="parameter">Tweet<br>Sıklığı<br /></span>
+                            </div>
+
+                            <div class="box">
+                                <span class="value">@Hesap.OturumBilgileri.LastTweetsDate</span>
+                                <span class="parameter">Son<br>Tweet</span>
                             </div>
                             <div class="box">
-                                <span class="value">146</span>
-                                <span class="parameter">Tweet <br> Sayısı</span>
-                            </div>
-                            <div class="box">
-                                <span class="value">146</span>
-                                <span class="parameter">Beğeni <br> Sayısı</span>
+                                <span class="value">@Hesap.OturumBilgileri.Date</span>
+                                <span class="parameter">Kayıt<br>Tarihi</span>
                             </div>
 
                         </div>
@@ -117,7 +133,7 @@
                     </div>
                 </div>
             </div>
-                @RenderBody()
+            @RenderBody()
         </div>
     </div>
 
