Database işlemleri ve cinsyet tahmin eklendi.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,6 +54,23 @@
             </div>
         </nav>
     </header>
+    <nav class="menu">
+        <a href="#" class="menu__item" data-tooltip="Dashboard">
+            <i class="material-icons">home</i>
+        </a>
+        <a href="#" class="menu__item menu__item--active" data-tooltip="Music Library">
+            <i class="material-icons">music_note</i>
+        </a>
+        <a href="#" class="menu__item" data-tooltip="Statistics">
+            <i class="material-icons">timeline</i>
+        </a>
+        <a href="#" class="menu__item" data-tooltip="Account Security">
+            <i class="material-icons">https</i>
+        </a>
+        <a href="#" class="menu__item" data-tooltip="Settings">
+            <i class="material-icons">settings</i>
+        </a>
+    </nav>
     <div class="container-fluid" style="margin: 0px">
         <div class="row">
             <div class="col-md-2">
@@ -81,7 +98,7 @@
                                 <span class="value">@Hesap.OturumBilgileri.LastLikesDate</span>
                                 <span class="parameter">Son<br>Beğeni</span>
                             </div>
-                         
+
                             <div class="box">
                                 <span class="value">@Hesap.OturumBilgileri.TweetCount</span>
                                 <span class="parameter">Tweet<br>Sayısı</span>
