--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,9 +10,8 @@
 
 <div class="col-md-10">
     <div id="row">
-        <label id="Progresstext"></label>
-        <div class="progress" style="display:none">
-            <div class="progress-bar progress-bar-striped active" role="progressbar" id="progress" style="width:50%">
+        <div class="progress"  id="progressbox" style="display:none; height:30px;">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" id="progress" style="width: 40%; height: 30px;">
                 40%
             </div>
         </div>
@@ -82,32 +81,30 @@
     </div>
 </div>
 <script type="text/javascript">
- 
+
     $(document).ready(function () {
-        
         $("#menu").on("click", function () {
-            $("#progress").css("display","block");
+            $("#progressbox").css("display", "block");
             setInterval(() => {
                 $.ajax({
                     url: '/Home/GuncelleProgress/',
                     type: 'GET',
-                    dataType: 'text',
+                    dataType: 'json',
                     success: function (data) {
-                        $("#progress").css("width", data + "%");
-                        $("#progress").text(data + "%");
+                        console.log(data);
+                        console.log(data.textt);
+                        console.log(data.taluee);
+                        console.log(data.textt + " " + data.valuee);
+                        $("#progress").css("width", data.valuee + "%");
+                        $("#progress").text(data.textt + " " + data.valuee + "%");
                     }
                 });
-                $.ajax({
-                    url: '/Home/LimitText/',
-                    type: 'GET',
-                    dataType: 'text',
-                    success: function (data) {
-                        $("#Progresstext").text(data + "%");
-                    }
-                });
-            }
-                , 5000);
+            }, 5000);
+
         });
+
+
+
 
     });
 </script>
