--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js" integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -42,7 +42,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li>
+                            <h4>Geçen süre:</h4> @ViewBag.gecensure
+                        </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
@@ -52,59 +56,55 @@
     <div class="container-fluid" style="margin: 0px">
         <div class="row">
             <div class="row">
-                <div class="row">
-                    <div class="profile">
-                        <div class="image">
-                            <div class="circle-1"></div>
-                            <div class="circle-2"></div>
-                            <img src="@Hesap.OturumBilgileri.PhotoURL" width="70" height="70" alt="@Hesap.OturumBilgileri.Username">
-                        </div>
-
-                        <div class="name">@Hesap.OturumBilgileri.Name</div>
-                        <div class="job">   <a id="username" href="https://twitter.com/@Hesap.OturumBilgileri.Username" target="_blank"><i class="bi bi-link-45deg">@Hesap.OturumBilgileri.Username</i></a></div>
-
-                        <div class="stats">
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.Followers</span>
-                                <span class="parameter">Takipçi Sayısı</span>
-                            </div>
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.BegeniSikligi</span>
-                                <span class="parameter">Beğeni Sıklığı </span>
-                            </div>
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.LastLikesDate</span>
-                                <span class="parameter">Son Beğeni</span>
-                            </div>
-
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.TweetCount</span>
-                                <span class="parameter">Tweet Sayısı</span>
-                            </div>
-
-
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.Following</span>
-                                <span class="parameter">Takip Edilen</span>
-                            </div>
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.TweetSikligi</span>
-                                <span class="parameter">Tweet Sıklığı<br /></span>
-                            </div>
-
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.LastTweetsDate</span>
-                                <span class="parameter">Son Tweet</span>
-                            </div>
-                            <div class="box">
-                                <span class="value">@Hesap.OturumBilgileri.Date</span>
-                                <span class="parameter">Kayıt Tarihi</span>
-                            </div>
-
-                        </div>
-
-
+             
+                <div class="profile">
+                    <div class="chart" id="graph" data-percent="100" style="float:left"></div>
+                    <div class="image">
+                        <div class="circle-1"></div>
+                        <div class="circle-2"></div>
+                        <img src="@Hesap.OturumBilgileri.PhotoURL" width="70" height="70" alt="@Hesap.OturumBilgileri.Username">
                     </div>
+
+                    <div class="name">@Hesap.OturumBilgileri.Name</div>
+                    <div class="job">   <a id="username" href="https://twitter.com/@Hesap.OturumBilgileri.Username" target="_blank"><i class="bi bi-link-45deg">@Hesap.OturumBilgileri.Username</i></a></div>
+
+                    <div class="stats">
+                        <div class="box">
+                            <span class="value">@Hesap.OturumBilgileri.Followers</span>
+                            <span class="parameter">Takipçi Sayısı</span>
+                        </div>
+                        <div class="box">
+                            <span class="value">@Hesap.OturumBilgileri.Following</span>
+                            <span class="parameter">Takip Edilen</span>
+                        </div>
+                        <div class="box">
+                            <span class="value">@Hesap.OturumBilgileri.LastLikesDate</span>
+                            <span class="parameter">Son Beğeni</span>
+                        </div>
+
+                        <div class="box">
+                            <span class="value">@Hesap.OturumBilgileri.LastTweetsDate</span>
+                            <span class="parameter">Son Tweet</span>
+                        </div>
+
+
+                        <div class="box">
+                            <span class="value">@Hesap.OturumBilgileri.BegeniSikligi</span>
+                            <span class="parameter">Beğeni Sıklığı</span>
+                        </div>
+                        <div class="box">
+                            <span class="value">@Hesap.OturumBilgileri.TweetSikligi</span>
+                            <span class="parameter">Tweet Sıklığı<br /></span>
+                        </div>
+
+                        <div class="box">
+                            <span class="value">@Hesap.OturumBilgileri.Date</span>
+                            <span class="parameter">Üyelik Süresi</span>
+                        </div>
+                    </div>
+                    <script>$(".stats").width($(".stats .box").length * ($(".stats .box").width() + 50));</script>
+
+
                 </div>
 
             </div>
