--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,8 @@
 
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js" integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -37,13 +38,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a id="menu" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TakipciList">Home</a>
+                            <a id="menu" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TakipciList"  asp-route-username="@Hesap.Instance.OturumBilgileri.Username"  asp-route-liste="following">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li>
-                            <h4>Geçen süre:</h4> @ViewBag.gecensure
+                            <h4 id="gecensure">Geçen süre:</h4> @ViewBag.gecensure
                         </li>
                     </ul>
 
@@ -56,56 +57,83 @@
     <div class="container-fluid" style="margin: 0px">
         <div class="row">
             <div class="row">
-             
-                <div class="profile">
-                    <div class="chart" id="graph" data-percent="100" style="float:left"></div>
-                    <div class="image">
-                        <div class="circle-1"></div>
-                        <div class="circle-2"></div>
-                        <img src="@Hesap.OturumBilgileri.PhotoURL" width="70" height="70" alt="@Hesap.OturumBilgileri.Username">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="profile">
+                                <div class="image">
+                                    <div class="circle-1"></div>
+                                    <div class="circle-2"></div>
+                                    <img src="@Hesap.Instance.OturumBilgileri.PhotoURL" width="70" height="70" alt="@Hesap.Instance.OturumBilgileri.Username">
+                                </div>
+
+                                <div class="name">@Hesap.Instance.OturumBilgileri.Name</div>
+                                <div class="job">   <a id="username" href="https://twitter.com/@Hesap.Instance.OturumBilgileri.Username" target="_blank"><i class="bi bi-link-45deg">@Hesap.Instance.OturumBilgileri.Username</i></a></div>
+
+
+
+
+                            </div>
+                        </div>
+                        <div class="col" style=" display: flex; justify-content: center; align-items: center;">
+                            <div class="stats">
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.Followers</span>
+                                    <span class="parameter">Takipçi Sayısı</span>
+                                </div>
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.Following</span>
+                                    <span class="parameter">Takip Edilen</span>
+                                </div>
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.LastLikesDate</span>
+                                    <span class="parameter">Son Beğeni</span>
+                                </div>
+
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.LastTweetsDate</span>
+                                    <span class="parameter">Son Tweet</span>
+                                </div>
+
+
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.BegeniSikligi</span>
+                                    <span class="parameter">Beğeni Sıklığı</span>
+                                </div>
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.TweetSikligi</span>
+                                    <span class="parameter">Tweet Sıklığı<br /></span>
+                                </div>
+
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.Date</span>
+                                    <span class="parameter">Üyelik Süresi</span>
+                                </div>
+
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.TweetCount</span>
+                                    <span class="parameter">Tweet Sayısı</span>
+                                </div>
+
+                                <div class="box">
+                                    <span class="value">@Hesap.Instance.OturumBilgileri.LikeCount</span>
+                                    <span class="parameter">Beğeni Sayısı</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="name">@Hesap.OturumBilgileri.Name</div>
-                    <div class="job">   <a id="username" href="https://twitter.com/@Hesap.OturumBilgileri.Username" target="_blank"><i class="bi bi-link-45deg">@Hesap.OturumBilgileri.Username</i></a></div>
-
-                    <div class="stats">
-                        <div class="box">
-                            <span class="value">@Hesap.OturumBilgileri.Followers</span>
-                            <span class="parameter">Takipçi Sayısı</span>
-                        </div>
-                        <div class="box">
-                            <span class="value">@Hesap.OturumBilgileri.Following</span>
-                            <span class="parameter">Takip Edilen</span>
-                        </div>
-                        <div class="box">
-                            <span class="value">@Hesap.OturumBilgileri.LastLikesDate</span>
-                            <span class="parameter">Son Beğeni</span>
-                        </div>
-
-                        <div class="box">
-                            <span class="value">@Hesap.OturumBilgileri.LastTweetsDate</span>
-                            <span class="parameter">Son Tweet</span>
-                        </div>
-
-
-                        <div class="box">
-                            <span class="value">@Hesap.OturumBilgileri.BegeniSikligi</span>
-                            <span class="parameter">Beğeni Sıklığı</span>
-                        </div>
-                        <div class="box">
-                            <span class="value">@Hesap.OturumBilgileri.TweetSikligi</span>
-                            <span class="parameter">Tweet Sıklığı<br /></span>
-                        </div>
-
-                        <div class="box">
-                            <span class="value">@Hesap.OturumBilgileri.Date</span>
-                            <span class="parameter">Üyelik Süresi</span>
+                    <div class="row">
+                        <div class="container" id="row">
+                            <div class="progress" id="progressbox" style="display: none; height: 30px; margin-bottom: 15px;">
+                                <div class="progress-bar progress-bar-striped  progress-bar-animated active" role="progressbar" id="progress" style="width: 40%; height: 30px; ">
+                                    40%
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <script>$(".stats").width($(".stats .box").length * ($(".stats .box").width() + 50));</script>
-
-
                 </div>
+
+
 
             </div>
             @RenderBody()
@@ -118,15 +146,33 @@
         <a href="@Url.ActionLink("TakipciList","Home")" class="menu__item menu__item--active" id="takipciler" data-tooltip="Takipçiler">
             <i class="bi bi-people-fill"></i>
         </a>
-        <a href="#" class="menu__item" data-tooltip="Statistics">
+        <a href="#" class="menu__item" data-tooltip="Geri takip etmeyenler">
             <i class="bi bi-envelope-fill"></i>
         </a>
-        <a href="#" class="menu__item" data-tooltip="Account Security">
+        <a href="#" class="menu__item" data-tooltip="Mesajları sil">
             <i class="bi bi-person-dash-fill"></i>
         </a>
         <a href="#" class="menu__item" data-tooltip="Settings">
             <i class="bi bi-gear-fill"></i>
         </a>
+
+        <div class="dropdown" style="width:100%; height: 50px;">
+            <button style="height:100%; margin:auto;" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" data-tooltip="Settings">
+                <i class="bi bi-gear-fill"></i>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width:250px;">
+                <li>
+                    <div class="input-group">
+                        <span class="input-group-text">Kullanıcı:</span>
+                        <input type="text" aria-label="Kullanıcı" class="form-control">
+                    </div>
+                </li>
+                <li><a class="dropdown-item" href="#">Takipçileri</a></li>
+                <li><a class="dropdown-item" href="#">Takip ettikleri</a></li>
+                <li><a class="dropdown-item" href="#">Ortak takipçiler</a></li>
+                <li><a class="dropdown-item" href="#">Beğenenler</a></li>
+            </ul>
+        </div>
     </nav>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
