--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,22 +10,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Tweetly_MVC</title>
 
-
-    <link rel="stylesheet" type="text/css" href="~/DataTables/datatables.min.css" />
-    <script type="text/javascript" src="~/DataTables/datatables.min.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js" integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="text/javascript" src="~/DataTables/datatables.min.js"></script>
 
+
+    <link rel="stylesheet" type="text/css" href="~/DataTables/datatables.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-
-
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/site.css" />
-
 </head>
 <body>
     <header>
@@ -58,11 +53,11 @@
     </header>
 
 
-    <div class="container-fluid" style="margin: 0px">
+    <div class="container-fluid">
         <div class="row">
-            <div class="row">
+            <div class="row" style="margin: auto">
                 <div class="container">
-                    <div class="row">
+                    <div class="row" style="margin: auto;">
                         <div class="col-4">
                             <div class="profile">
                                 <div class="image">
@@ -140,8 +135,28 @@
 
 
             </div>
-            @RenderBody()
         </div>
+
+        <div class="row">
+            <button class="button" style="margin: 15px" onclick="grafiklerToggle()"><i class="bi bi-bar-chart-line-fill"></i>   Grafikler</button>
+            <div class="container" id="grafikler">
+                <div class="row">
+                    <div class="col-4">
+                        <canvas id="myChart"></canvas>
+                    </div>
+                    <div class="col">
+                        <canvas id="myChart2"></canvas>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+        <div class="row">   @RenderBody()</div>
+
+
+
     </div>
     <nav class="menu">
         <a href="#" class="menu__item" data-tooltip="Dashboard">
@@ -184,6 +199,10 @@
     </nav>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/Datatable.js" asp-append-version="true"></script>
+
+    <script src="~/js/Grafikler.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
