Filtre için önyüz kodlandı ve backend altyapısı hazırlandı

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -351,6 +351,7 @@ p.product a {
 }
 
 .tablobutonlar {
+    width: auto;
     margin: 5px !important;
     background-color: #324960 !important;
     color: white !important;
